<resources>
    <string name="app_name">Linear Algebra</string>
    <string name="mainActivityTitle">Enter a matrix</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="number">Number</string>
    <string name="determinant">Determinant</string>
    <string name="gauss">Gauss</string>
    <string name="inverse">Inverse</string>
    <string name="fillWithZeroes">Fill empty cells with Zeroes?</string>
    <string name="fillWithZeroesTwoLines">Fill empty cells\nwith Zeroes?</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="matrixInputCellHint"><bold>a[%1$d][%2$d]</bold></string>
    <string name="freeColumnCellHint"><bold>x%1$d</bold></string>
</resources>
