<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlMainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.MainActivityView">

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/mainActivityTitle"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMatrixInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_below="@id/llTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMatrixRows"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/rows"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMatrixRows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMatrixColumns"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/columns"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMatrixColumns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCreateMatrixInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/llMatrixInput">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btnSubmitMatrixSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:textAlignment="center"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMatrixLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llCreateMatrixInput"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvInputMatrix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFillZeroes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/llMatrixLayout"
        android:gravity="center"
        android:visibility="gone">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbMainActivityFillWithZeroes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvMainActivityFillWithZeroes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fillWithZeroes"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingBottom="3.5dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llCalculationOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:weightSum="3"
        android:layout_below="@id/llFillZeroes">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btnDeterminant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/determinant"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:clickable="false"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btnGauss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/gauss"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:clickable="false"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btnInverse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/inverse"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:clickable="false"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>